--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -7,22 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="crie.css">
+    <link rel="stylesheet" href="/css/crie.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/crie/crie.html" />
 </head>
 
 <body>
     <div class="center-align loader">
-        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
 
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+                <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -31,10 +31,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
-                    <li><a href="#" class="orange-text">Crie</a></li>
-                    <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-                    <li><a href="../../index.html" class="black-text">Sair</a></li>
+                    <li><a href="/alunos" class="black-text">Alunos</a></li>
+                    <li><a href="/crie" class="orange-text">Crie</a></li>
+                    <li><a href="/financas" class="black-text">Finanças</a></li>
+                    <li><a href="/" class="black-text">Sair</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,8 +44,8 @@
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
         <li><a href="#" class="orange-text">Crie</a></li>
-        <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-        <li><a href="../../index.html" class="black-text">Sair</a></li>
+        <li><a href="/financas" class="black-text">Finanças</a></li>
+        <li><a href="/" class="black-text">Sair</a></li>
     </ul>
 
     <!-- Lista dos alunos -->
@@ -73,8 +73,8 @@
                                     </thead>
 
                                     <tbody>
-                                        <tr data-url="../treino/treino.html">
-                                            <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                                        <tr data-url="/treino">
+                                            <td><img src="/img/avatar.png" alt="Foto José"></td>
                                             <td>José</td>
                                             <td>Musculação</td>
                                             <td>8:30</td>
@@ -84,7 +84,7 @@
                                         </tr>
 
                                         <tr data-url="../treino/treino.html">
-                                            <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                                            <td><img src="/img/avatar.png" alt="Foto José"></td>
                                             <td>José</td>
                                             <td>Musculação</td>
                                             <td>8:30</td>
@@ -123,8 +123,8 @@
                                     </thead>
 
                                     <tbody>
-                                        <tr data-url="../treino/treino.html">
-                                            <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                                        <tr data-url="/treino">
+                                            <td><img src="/img/avatar.png" alt="Foto José"></td>
                                             <td>José</td>
                                             <td>Musculação</td>
                                             <td>8:30</td>
@@ -133,8 +133,8 @@
                                             <td><a href="#" class="black-text">Remover aluno</a></td>
                                         </tr>
 
-                                        <tr data-url="../treino/treino.html">
-                                            <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                                        <tr data-url="/treino">
+                                            <td><img src="/img/avatar.png" alt="Foto José"></td>
                                             <td>José</td>
                                             <td>Musculação</td>
                                             <td>8:30</td>
@@ -175,7 +175,7 @@
 
                                 <tbody>
                                     <tr data-url="../treino/treino.html">
-                                        <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                                        <td><img src="/img/avatar.png" alt="Foto José"></td>
                                         <td>José</td>
                                         <td>Musculação</td>
                                         <td>8:30</td>
@@ -185,7 +185,7 @@
                                     </tr>
 
                                     <tr data-url="../treino/treino.html">
-                                        <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                                        <td><img src="/img/avatar.png" alt="Foto José"></td>
                                         <td>José</td>
                                         <td>Musculação</td>
                                         <td>8:30</td>
@@ -221,14 +221,14 @@
                     </div>
                     <div class="col l4 offset-l2 s12">
                         <ul>
-                            <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
-                            <li><a class="white-text text-lighten-3" href="">Crie</a></li>
-                            <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
-                            <li><a class="white-text text-lighten-3" href="../../index.html">Sair</a></li>
+                            <li><a class="white-text text-lighten-3" href="/alunos">Alunos</a></li>
+                            <li><a class="white-text text-lighten-3" href="/crie">Crie</a></li>
+                            <li><a class="white-text text-lighten-3" href="/financas">Finanças</a></li>
+                            <li><a class="white-text text-lighten-3" href="/">Sair</a></li>
                         </ul>
                     </div>
                     <div class="col l1 s4 right">
-                        <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
+                        <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
                     </div>
                 </div>
             </div>
@@ -244,10 +244,10 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script src="../../js/main.js"></script>
-        <script src="../../js/topo.js"></script>
-        <script src="../../js/loader.js"></script>
-        <script src="../../js/crie.js"></script>
+        <script src="/js/main.js"></script>
+        <script src="/js/topo.js"></script>
+        <script src="/js/loader.js"></script>
+        <script src="/js/crie.js"></script>
 </body>
 
 </html>
