--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -6,24 +6,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="sobre.css">
+    <link rel="stylesheet" href="/css/sobre.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/sobre/sobre.html" />
 </head>
 
 <body>
     <div class="center-align loader">
-        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
 
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="../../index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="/" class="brand-logo"><img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -32,10 +32,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../../index.html" class="black-text">Home</a></li>
-                    <li><a href="#" class="orange-text">Sobre</a></li>
-                    <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
-                    <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
+                    <li><a href="/" class="black-text">Home</a></li>
+                    <li><a href="/sobre" class="orange-text">Sobre</a></li>
+                    <li><a href="/login" class="black-text">Entrar</a></li>
+                    <li><a href="/cadastro" class="black-text">Registrar</a></li>
                 </ul>
             </div>
         </nav>
@@ -43,10 +43,10 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="../../index.html">Início</a></li>
-        <li><a href="#" class="orange-text">Sobre</a></li>
-        <li><a href="../entrar/login.html" class="black-text" aria-label="Entrar">Entrar</a></li>
-        <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
+        <li><a href="/">Início</a></li>
+        <li><a href="/sobre" class="orange-text">Sobre</a></li>
+        <li><a href="/login" class="black-text" aria-label="Entrar">Entrar</a></li>
+        <li><a href="/cadastro" class="black-text">Registrar</a></li>
     </ul>
 
 
@@ -129,10 +129,10 @@
                 <div class="col s12 m6 l6">
                     <div id="profile-card" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="../../img/8.png" alt="user bg">
+                            <img class="activator" src="/img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="../../img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="./img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
@@ -170,10 +170,10 @@
                 <div class="col s12 m6 l6">
                     <div id="profile-card2" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="../../img/8.png" alt="user bg">
+                            <img class="activator" src="/img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="../../img/paulo.png" alt="Paulo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="/img/paulo.png" alt="Paulo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
@@ -211,10 +211,10 @@
                 <div class="col s12 m6 l6">
                     <div id="profile-card3" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="../../img/8.png" alt="user bg">
+                            <img class="activator" src="/img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="../../img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="/img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
@@ -253,10 +253,10 @@
                 <div class="col s12 m6 l6">
                     <div id="profile-card4" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="../../img/8.png" alt="user bg">
+                            <img class="activator" src="/img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="../../img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="/img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
@@ -300,9 +300,6 @@
         <div class="container center-align" id="tituloBtn">
             <h2>Faça parte da nossa equipe!</h2>
         </div>
-
-
-
 
 
         <div class="container" id="form">
@@ -377,14 +374,14 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="#">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="../entrar/login.html" aria-label="Entrar">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="/">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="/sobre">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="/login" aria-label="Entrar">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="/cadastro">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -401,9 +398,9 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../../js/main.js"></script>
-    <script src="../../js/topo.js"></script>
-    <script src="../../js/loader.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/topo.js"></script>
+    <script src="/js/loader.js"></script>
     <script>
         $(document).ready(function() {
             $('input#input_text, textarea#textarea2').characterCounter();
@@ -413,8 +410,8 @@
     <!-- Validar form -->
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
-    <script src="../../js/messages_pt_BR.js"></script>
-    <script src="../../js/formSobre.js"></script>
+    <script src="/js/messages_pt_BR.js"></script>
+    <script src="/js/formSobre.js"></script>
 </body>
 
 </html>
