--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -7,24 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="treino.css">
+    <link rel="stylesheet" href="/css/treino.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/treino/treino.html" />
 </head>
 
 <body>
     <div class="center-align loader">
-        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
 
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;">
-                </a>
+                <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
 
                 <!-- Ícone para abrir no Mobile -->
                 <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
@@ -32,10 +31,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
-                    <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
-                    <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-                    <li><a href="../../index.html" class="black-text">Sair</a></li>
+                    <li><a href="/alunos" class="orange-text">Alunos</a></li>
+                    <li><a href="/crie" class="black-text">Crie</a></li>
+                    <li><a href="/financas" class="black-text">Finanças</a></li>
+                    <li><a href="/" class="black-text">Sair</a></li>
                 </ul>
             </div>
         </nav>
@@ -43,17 +42,17 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
-        <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
-        <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-        <li><a href="../../index.html" class="black-text">Sair</a></li>
+        <li><a href="/alunos" class="orange-text">Alunos</a></li>
+        <li><a href="/crie" class="black-text">Crie</a></li>
+        <li><a href="/financas" class="black-text">Finanças</a></li>
+        <li><a href="/" class="black-text">Sair</a></li>
     </ul>
 
     <div class="container">
         <div id="perfil">
             <div class="row">
                 <div class="col s12 m6 l3">
-                    <img src="../../img/avatar.png" alt="">
+                    <img src="/img/avatar.png" alt="">
                 </div>
 
                 <div class="col s12 m6 l9 left-align">
@@ -75,7 +74,7 @@
                             <P>Sexo: Masculino</P>
                             <p>Data Nasc: 29/03/1997</p>
                             <p>
-                                <a href="../EditarAluno/editarAluno.html" class="black-text"><i class="material-icons">create</i>Editar dados</a>
+                                <a href="/editarAluno" class="black-text"><i class="material-icons">create</i>Editar dados</a>
                             </p>
                             <p><a href="#" class="black-text"><i class="material-icons">delete</i>Remover aluno</a></p>
                         </div>
@@ -134,14 +133,14 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
-                        <li><a class="white-text text-lighten-3" href="../../index.html">Sair</a></li>
+                        <li><a class="white-text text-lighten-3" href="/alunos">Alunos</a></li>
+                        <li><a class="white-text text-lighten-3" href="/crie">Crie</a></li>
+                        <li><a class="white-text text-lighten-3" href="/financas">Finanças</a></li>
+                        <li><a class="white-text text-lighten-3" href="/">Sair</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -157,10 +156,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <script src="../../js/main.js"></script>
-    <script src="../../js/topo.js"></script>
-    <script src="../../js/loader.js"></script>
-    <script src="../../js/treino.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/topo.js"></script>
+    <script src="/js/loader.js"></script>
+    <script src="/js/treino.js"></script>
     <script>
         $(document).ready(function() {
             $('.collapsible').collapsible();
