--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -7,22 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="alunos.css">
+    <link rel="stylesheet" href="/css/alunos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/alunos/alunos.html" />
 </head>
 
 <body>
     <div class="center-align loader">
-        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+                <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -31,10 +31,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="#" class="orange-text">Alunos</a></li>
-                    <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
-                    <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-                    <li><a href="../../index.html" class="black-text">Sair</a></li>
+                    <li><a href="/alunos" class="orange-text">Alunos</a></li>
+                    <li><a href="/crie" class="black-text">Crie</a></li>
+                    <li><a href="/financas" class="black-text">Finanças</a></li>
+                    <li><a href="/" class="black-text">Sair</a></li>
                 </ul>
             </div>
         </nav>
@@ -42,10 +42,10 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="#" class="orange-text">Alunos</a></li>
-        <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
-        <li><a href="../financas/financas.html" class="black-text">Finanças</a></li>
-        <li><a href="../../index.html" class="black-text">Sair</a></li>
+        <li><a href="/alunos" class="orange-text">Alunos</a></li>
+        <li><a href="/crie" class="black-text">Crie</a></li>
+        <li><a href="/financas" class="black-text">Finanças</a></li>
+        <li><a href="/" class="black-text">Sair</a></li>
     </ul>
 
 
@@ -57,11 +57,11 @@
                     <h2>2 Alunos ativos</h2>
                 </div>
                 <div class="col s12 m12 l6 ">
-                    <img class="responsive-img" src="../../img/user.png" alt="Alunos ativos">
+                    <img class="responsive-img" src="/img/user.png" alt="Alunos ativos">
                 </div>
             </div>
             <div class="col s12 m12 l12 right-align baixoQuadrado">
-                <a id="addAluno" href="../cadastroAluno/cadastrarAlunos.html">ADICIONAR NOVO ALUNO</a>
+                <a id="addAluno" href="/cadastroAluno">ADICIONAR NOVO ALUNO</a>
             </div>
         </div>
     </div>
@@ -98,15 +98,15 @@
                 </thead>
 
                 <tbody>
-                    <tr data-url="../treino/treino.html">
-                        <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                    <tr data-url="/treino">
+                        <td><img src="/img/avatar.png" alt="Foto José"></td>
                         <td>José</td>
                         <td>0800545145</td>
                         <td>32 km</td>
                     </tr>
 
-                    <tr data-url="../treino/treino.html">
-                        <td><img src="../../img/avatar.png" alt="Foto José"></td>
+                    <tr data-url="/treino">
+                        <td><img src="/img/avatar.png" alt="Foto José"></td>
                         <td>José</td>
                         <td>0800545145</td>
                         <td>32 km</td>
@@ -145,14 +145,14 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="#">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="../financas/financas.html">Finanças</a></li>
-                        <li><a class="white-text text-lighten-3" href="../../index.html">Sair</a></li>
+                        <li><a class="white-text text-lighten-3" href="/">Alunos</a></li>
+                        <li><a class="white-text text-lighten-3" href="/crie">Crie</a></li>
+                        <li><a class="white-text text-lighten-3" href="/financas">Finanças</a></li>
+                        <li><a class="white-text text-lighten-3" href="/">Sair</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -168,14 +168,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../../js/main.js"></script>
-    <script src="../../js/topo.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/topo.js"></script>
 
     <!-- PDF -->
     <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.65/build/pdfmake.min.js"></script>
-    <script src="../../js/loader.js"></script>
-    <script src="../../js/html2canvas.min.js"></script>
-    <script src="../../js/exportar.js"></script>
+    <script src="/js/loader.js"></script>
+    <script src="/js/html2canvas.min.js"></script>
+    <script src="/js/exportar.js"></script>
 
     <!-- EXCEL -->
     <script src="https://cdn.jsdelivr.net/npm/jquery-table2excel@1.1.1/dist/jquery.table2excel.min.js"></script>
