--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -2,34 +2,45 @@
 <html lang="pt-br">
 
 <head>
-    <title>Cadastrar Aluno</title>
+    <title>Cadastro</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="cadastroAlunos.css">
+    <link rel="stylesheet" href="/css/cadastro.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
 </head>
 
 <body>
-
     <div class="center-align loader">
-        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
 
-    <div class="cadastro">
+    <div class="logout">
         <div class="row">
-            <div class="col s12 m12 l6 center-align" id="cadastroContainer">
-                <a href="../alunos/alunos.html">
-                    <img class="responsive-img logo" src="../../img/icon512.png" alt="High Performance">
+            <div class="col s12 m12 l5" id="cadastroContainer">
+                <a href="/">
+                    <img class="responsive-img logo" src="/img/logo.png" alt="High Performance">
                 </a>
-                <h1>Cadastrar novo aluno</h1>
+                <h1>Cadastro</h1>
+
+                <p>Faça seu cadastro, entre na plataforma e monitore seus alunos.</p>
+
+                <div class="cadastro">
+                    <div class="input-field">
+                        <a href="/login">
+                            <p class=" waves-effect waves-light black-text cad" type="submit" name="action">
+                                <i class="material-icons">arrow_back</i>Já sou cadastrado</p>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="col s12 m12 l6">
-                <form class="formValidate" id="formValidate" method="POST" action="../alunos/alunos.html">
+
+            <div class="col s12 m12 l7">
+                <form id="form" method="POST" action="/alunos">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
@@ -49,34 +60,40 @@
                         <div class="errorTxt3 right-align "></div>
                     </div>
                     <div class="input-field">
-                        <i class="material-icons prefix">date_range</i>
-                        <input name="data" type="date" class="form-control" data-error=".errorTxt4">
-                        <label for="date">Data Nasc.</label>
-                        <div class="errorTxt4 right-align"></div>
+                        <i class="material-icons prefix">lock_outline</i>
+                        <input name="senha" id="password" type="password" data-error=".errorTxt4">
+                        <label for="password">Senha</label>
+                        <div class="errorTxt4 right-align "></div>
                     </div>
                     <div class="input-field">
-                        <button class="btn waves-effect waves-light right submit" type="submit" name="action">Cadastrar
-                      </button>
+                        <i class="material-icons prefix">lock_outline</i>
+                        <input name="senha2" id="passwordAgain" type="password" data-error=".errorTxt5">
+                        <label for="passwordAgain"> Repetir Senha</label>
+                        <div class="errorTxt5 right-align "></div>
+                    </div>
+                    <div class="input-field">
+                        <button class="btn waves-effect waves-light right submit" type="submit" name="action">Cadastrar</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../../js/loader.js"></script>
+    <script src="/js/loader.js"></script>
 
     <!-- Validar form -->
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
-    <script src="../../js/messages_pt_BR.js"></script>
-    <script src="../../js/formCadastroAluno.js"></script>
+    <script src="/js/messages_pt_BR.js"></script>
+    <script src="/js/formCadastro.js"></script>
 
     <!-- Mascarar telefone -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
-    <script src="../../js/maskTel.js"></script>
+    <script src="/js/maskTel.js"></script>
 </body>
 
 </html>
