--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,10 +4,10 @@
 <head>
     <title>Login</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/css/login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,18 +16,18 @@
 
 <body>
     <div class="center-align loader">
-        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
+        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
 
     <div class="row">
 
         <div class="col s12 m11 l5" id="login">
-            <a href="../../index.html">
-                <img class="responsive-img logo" src="../../img/logo.png" alt="High Performance">
+            <a href="/">
+                <img class="responsive-img logo" src="/img/logo.png" alt="High Performance">
             </a>
             <h1>Faça seu Login</h1>
 
-            <form id="form" method="POST" action="../alunos/alunos.html">
+            <form id="form" method="POST" action="/alunos">
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
                     <input name="email" id="email" type="email" data-error=".errorTxt1">
@@ -47,7 +47,7 @@
 
             <div class="cadastro">
                 <div class="input-field">
-                    <a href="../cadastro/cadastro.html">
+                    <a href="/cadastro">
                         <p class=" waves-effect waves-light black-text cad" type="submit" name="action">
                             <i class="material-icons">arrow_forward</i>Não tenho cadastro</p>
                     </a>
@@ -56,18 +56,18 @@
         </div>
 
         <div class="col s12 m l7">
-            <img class="responsive-img bannerimg" src="../../img/login.png" alt="Banner Login">
+            <img class="responsive-img bannerimg" src="/img/login.png" alt="Banner Login">
         </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../../js/loader.js"></script>
+    <script src="/js/loader.js"></script>
 
     <!-- Validar form -->
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-    <script src="../../js/messages_pt_BR.js"></script>
-    <script src="../../js/formLogin.js"></script>
+    <script src="/js/messages_pt_BR.js"></script>
+    <script src="/js/formLogin.js"></script>
 </body>
 
 </html>
