--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
         </div>
         <div class="col s12 m6 l7">
             <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
-            <p class="right-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+            <p class="right-align">O site High Performance é voltado para educadores físicos que desejam gerenciar dados do alunos que usam o aplicativo de monitoramento Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros benefícios.
             </p>
             <a href="/sobre">Saber mais</a>
         </div>
